[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataset-converter"
version = "1.0.0"
description = "Universal YOLO dataset converter for annotation platforms (CVAT, Roboflow, YOLO split). GUI & CLI."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "MacroMan5" },
]
keywords = ["yolo", "cvat", "roboflow", "dataset", "annotation", "converter", "computer-vision"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

[project.urls]
Homepage = "https://github.com/MacroMan5/dataset-converter"
Repository = "https://github.com/MacroMan5/dataset-converter"
Issues = "https://github.com/MacroMan5/dataset-converter/issues"

[project.scripts]
dataset-converter = "dataset_converter:cli_main"

[tool.setuptools.packages.find]
where = ["src"]
